--- a/gird-layout/css-grid.html
+++ b/gird-layout/css-grid.html
@@ -50,12 +50,12 @@
 </div>
 
 <div class="container5">
-    <div class="tv tv1">tv1</div>
-    <div class="tv tv2">tv2</div>
-    <div class="tv tv3">tv3</div>
-    <div class="tv tv4">tv4</div>
-    <div class="tv tv5">tv5</div>
-    <div class="tv tv6">tv6</div>
+    <div class="tv tv1">box1</div>
+    <div class="tv tv2">box2</div>
+    <div class="tv tv3">box3</div>
+    <div class="tv tv4">box4</div>
+    <div class="tv tv5">box5</div>
+    <div class="tv tv6">box6</div>
   
 </div>
 
